# realearn

.github/workflows/: macos-x86_64.yml  release.yml
allocator/: Cargo.toml
api/: Cargo.toml
api/src/persistence/: target.rs
artwork-processor/: Cargo.toml
artwork-processor/src/: main.rs
base/: Cargo.toml
base/src/: byte_pattern.rs
csi/: Cargo.toml
csi/src/: lib.rs  schema.rs
dialogs/: Cargo.toml
dialogs/src/: unit_panel.rs
doc/realearn/modules/ROOT/: nav.adoc
extension/: Cargo.toml
macros/: Cargo.toml
main/: Cargo.toml
main/src/application/: instance_model.rs  mod.rs  source_model.rs  target_model.rs  unit_model.rs
main/src/domain/: main_processor.rs  realearn_target.rs  reaper_target.rs  unit.rs  unresolved_reaper_target.rs
main/src/domain/targets/: enable_instances_target.rs  enable_units_target.rs  fx_tool_target.rs  mod.rs  track_tool_target.rs
main/src/infrastructure/data/: compartment_model_data.rs  instance_data.rs  target_model_data.rs  unit_data.rs
main/src/infrastructure/plugin/: backbone_shell.rs  clip_matrix_handler.rs  hidden_helper_panel.rs  instance_shell.rs  unit_shell.rs
main/src/infrastructure/proto/: ext.rs  generated.rs  hub.rs  playtime_ext.rs  (+3 more)
playtime-api/: Cargo.toml
playtime-api/src/persistence/: mod.rs  serialization.rs
pot/: Cargo.toml
pot-browser/: Cargo.toml
pot-browser/src/: pot_browser_panel.rs
pot/src/: lib.rs  plugins.rs
pot/src/providers/: komplete.rs
resources/test-projects/: issue-1619-instance-tags.RPP  issue-1620-unit-tags.RPP
rx-util/: Cargo.toml
swell-ui/: Cargo.toml
(+20 files in other folders)
