[package]
name = "helgobox-dialogs"
version = "0.1.0"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
edition = "2021"
publish = false

[dependencies]
derive_more.workspace = true
indexmap.workspace = true

[lints.clippy]
# Enum glob use is not really dangerous in this module. Non-critical.
enum_glob_use = "allow"